# Bachelor-Thesis-Project

./: CMakeLists.txt  Doxyfile  README.md  README.txt
docs/html/: _aruco_generator_8cpp.html  _aruco_generator_8h.html  _bad_things_8cpp.html  _bad_things_8h.html  _bad_things_8h_source.html  _button_8h.html  _button_8h_source.html  _camera_calibration_8h_source.html  _card_type_actions_8cpp.html  _card_type_actions_8h.html  _card_type_actions_8h_source.html  _detection_variants_8cpp.html  _extras_8h_source.html  _game_state_8h.html  _input_event_8h_source.html  _munchkin_cards_8cpp.html  (+31 more)
html/: _aruco_generator_8h_source.html  _button_8cpp.html  _camera_calibration_8cpp.html  _camera_calibration_8h.html  _detection_variants_8h.html  _detection_variants_8h_source.html  _extras_8cpp.html  _extras_8h.html  _game_state_8h_source.html  _input_event_8h.html  _munchkin_cards_8h_source.html  _r_e_a_d_m_e_8md.html  _t_t_munchkin_tut_8cpp.html  _y_o_l_o_data_generator_8cpp.html  annotated.html  class_button.html  class_munchkin_card.html  common_8h.html  common_8h_source.html  files.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  menudata.js  namespacebadthings.html  namespacecardtypeaction.html  namespacemunch__tut.html  namespaces.html  struct_game_state-members.html  struct_game_state.html  struct_input_event-members.html  struct_input_event.html  struct_mouse_params-members.html  struct_mouse_params.html  struct_n_nresult.html  struct_player_stats-members.html  struct_player_stats.html  (+1 more)
include/: ArucoGenerator.h  CameraCalibration.h  DetectionVariants.h  GameState.h  PostProcessFunctions.h  YOLODataGenerator.h  common.h
latex/: _camera_calibration_8h.tex  _detection_variants_8cpp.tex  _input_event_8h.tex  _munchkin_cards_8h.tex  _post_process_functions_8cpp.tex  annotated.tex  class_button.tex  class_munchkin_card.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  index.tex  main_8cpp.tex  namespacemunch__tut.tex  namespaces.tex  refman.aux  refman.idx  refman.ind  refman.out  refman.tex  refman.toc  structtest_output.tex
src/: ArucoGenerator.cpp  CameraCalibration.cpp  DetectionVariants.cpp  MunchkinCards.cpp  PostProcessFunctions.cpp  YOLODataGenerator.cpp  main.cpp
(+142 files in other folders)
